# postgresql-notify

./: README.md  app.py  index.html  pyproject.toml  send_message.py
