[tool.poetry]
name = "postgresql-notify"
version = "0.1.0"
description = ""
authors = ["meirdev <maornet@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg = {extras = ["binary", "pool"], version = "^3.1.9"}
fastapi = "^0.98.0"
uvicorn = "^0.22.0"
websockets = "^11.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
